chore: Dockerfile settings